<?xml version="1.0" encoding="utf-8"?>
<!-- DEFINITIVE FIX: Restored original look with proper ScrollView -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boarder"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:padding="8dp"
            android:text="Why Should You Donate Blood?"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/boarder"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/info_"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boarder"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/eligibility_"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/boarder"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/male_"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/boarder"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/female_"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>
