<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@drawable/red_button_bg"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context="com.android.iunoob.bloodbank.activities.Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/ic_cover_logo">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle"
            android:src="@mipmap/blood_bank_ic_launcher_foreground"
            android:contentDescription="@string/nav_header_desc" />

        <TextView
            android:id="@+id/UserNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/UserEmailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nav_header_subtitle"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>
